--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-persona/edicion-perfil-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-persona/edicion-perfil-persona.component.html
@@ -19,9 +19,42 @@
           </div>
 
         <div class="contacto">
-        <h5>Información de contacto</h5>
+        <h5>Información de contacto         
+          <img src="../../assets/img/icono_editar.png" alt="Editar" title="Editar" width="20">
+        </h5>
             <p>Celular</p>
             <p>Correo</p>
         </div>
-    </div>
+
+        <div>
+          <label for="apellidos">Celular</label>
+          <input type="text" id="apellidos" name="apellidos" placeholder="Ej.:999123045"  maxlength="150" >
+          <p  class="validador" >Debe ingresar el celular.</p>
+        </div>
+        <div>
+          <label for="nombres">Correo</label>
+          <input type="text" id="nombres" name="nombres" placeholder="Ej.:camila.flores@ejemplo.com" maxlength="150" >
+          <p class="validador" >Debe ingresar el correo.</p>
+        </div>
+        <div class="button">
+          <button class="buttonSiguiente">Guardar cambios</button>
+          <button class="buttonCancelar">Cancelar</button>
+        </div>
+
+        <div class="editar">
+          <h3>Editar foto</h3>
+          <div class="circle"> 
+            <div class="circleEditar"> 
+            </div> 
+          </div>    
+           <a href="#">Seleccionar foto</a>
+        </div>
+
+        <div class="button">
+          <button class="buttonSiguiente">Guardar cambios</button>
+          <button class="buttonCancelar">Cancelar</button>
+        </div>
+  </div>
 </body>
+
+
