--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.css
@@ -69,7 +69,7 @@
     color: #777;
     display: grid;
     gap: 0.5em;
-    padding: 1.7em 1.6em 1.3em 1.6em;
+    padding: 1.7em 2em 1.3em 2em;
   }
   
   .form :last-child {
@@ -93,7 +93,7 @@
     flex-wrap: wrap;
   }
 
-  .form .header .h3{
+  .form .header h3{
     text-align: left;
     margin-top: 0%;
     margin-bottom: 0%;
@@ -109,21 +109,19 @@
    
   }
 
-  form .empresa{
-    margin-bottom: 20px;
-  }
 
-  .form .empresa h5{
+  .form .personal h5{
    font-size: 14px;
    border-bottom: 1px solid #000;
   }
 
-  .form .empresa p{
+  .form .personal p{
     font-size: 11px;
     text-align: left;
  
    }
 
+   
    form .representante{
     margin-bottom: 20px;
   }
@@ -138,11 +136,9 @@
   
     }
     .form .representante img{
-        margin-left: 125px;
+        margin-left: 115px;
        }
     
- 
-
 
   .form .contacto h5{
    font-size: 14px;
@@ -157,7 +153,7 @@
 
    
   .form .contacto img{
-    margin-left: 185px;
+    margin-left: 170px;
    }
 
 
@@ -239,7 +235,7 @@
 
   .form select {
     padding: 5px 7px;
-    width: 80%;
+    width: 95%;
     font-size: 12px;
     border: 1px solid #ccc;
     border-radius: 1px;
@@ -272,6 +268,7 @@
     flex-wrap: wrap;
   }
   
+  
   .left {
     width: 50%;
     margin-top: 5px;
@@ -279,9 +276,8 @@
   }
 
   .left input{
-    width: 80%;
+    width: 95%;   
   }
-
   .right {
     width: 50%;
     margin-top: 5px;
@@ -299,6 +295,7 @@
   
   /* ---------- BUTTON ---------- */
   
+
 
   .buttonSiguiente {
     background-color: #58595B;
@@ -510,7 +507,7 @@
      -webkit-border-radius: 50%;
      border-radius: 50%;
      background: #ccc;
-     margin: 0px 34px 0px 15px;
+     margin: 0px 25px 0px 5px;
      border: 1px solid #ccc;
 }
 
@@ -528,21 +525,21 @@
 }
 
 .form .editar .circle {
-  width: 360px;
-  height: 360px;
+  width: 345px;
+  height: 280px;
   background: #ccc;
   margin: 20px 0px 20px 0px;
   border: 1px solid #ccc;
 }
 
 .form .editar .circle .circleEditar {
-  width: 320px;
-  height: 320px;
+  width: 260px;
+  height: 260px;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   background: #eee;
-  margin: 20px 0px 0px 20px;
+  margin: 10px 0px 0px 40px;
   border: 1px solid #ccc;
  
 }
