--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -101,7 +101,7 @@
                <div class="circleEditar"> 
                </div> 
              </div>    
-              <a href="#">Seleccionar foto</a>
+             <input type="file" name="adjunto" accept=".pdf,.jpg,.png" multiple />
 
            <div class="button">
              <button class="buttonSiguiente">Guardar</button>
