--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -94,7 +94,7 @@
          </div>
 
          <div>
-            <button class="buttonSiguiente" (click)="clickPaso3()" >Cambiar contraseña</button>    
+            <button class="buttonSiguiente" (click)="cambiarContrasena()">Cambiar contraseña</button>    
           </div>
     </div>
     
