--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -10,7 +10,7 @@
         <div class="logo-aplicacion">
           <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
         </div>
-        <div *ngIf="!validaSuccess">
+        <div class="title" *ngIf="!validaSuccess">
           <h3>Recuperar contraseña</h3>
           <p>Persona Jurídica</p>
         </div>         
