--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.css
@@ -146,8 +146,10 @@
   
   .login__header h3 {
     text-align: center;
-    margin-top: 0%;
+    margin-top: 10px;
     margin-bottom: 0%;
+    font-size: 22px;
+    font-weight: 600;
   }
   
   
@@ -178,7 +180,7 @@
     color: #777;
     display: grid;
     gap: 0.5em;
-    padding: 1.7em 1.6em 1.3em 1.6em;
+    padding: 0.8em 1.6em 1.3em 1.6em;
 
   }
   
@@ -273,7 +275,7 @@
   
   .logo-aplicacion, h1, p {
     text-align: center;
-    padding-bottom: 5px;
+    margin-top: 10px;
   } 
   
   
