--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
@@ -147,11 +147,49 @@ a:hover {
   padding: 0.5em 0.5em 0em 0.5em;
 }
 
-.login__header h3 {
+
+
+.login__header p {
   text-align: center;
   margin-top: 0%;
   margin-bottom: 0%;
+  padding-top: 0%;
 }
+
+.login__header .title h3 {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 0%;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+
+.login__header .title p {
+  text-align: center;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  padding-top: 0%;
+}
+
+
+.login__header :first-child {
+  margin-top: 0;
+}
+.login__header {
+  background-color: #fff;
+  color: #000;
+  padding: 0.5em 0.5em 0em 0.5em;
+}
+
+.login__header h3 {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 0%;
+  font-size: 22px;
+  font-weight: 600;
+}
+
 
 
 .login__header p {
@@ -170,6 +208,7 @@ a:hover {
   margin-bottom: 0;
 }
 
+
 .login h2 .icon {
   margin-right: 14px;
 }
@@ -181,7 +220,7 @@ a:hover {
   color: #777;
   display: grid;
   gap: 0.5em;
-  padding: 1.7em 1.6em 1.3em 1.6em;
+  padding: 0.8em 1.6em 1.3em 1.6em;
   
 }
 
@@ -286,9 +325,9 @@ a:hover {
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-bottom: 5px;
-} 
+  margin-top: 10px;
 
+} 
 .column {
   display: flex;
   flex-direction: row;
