--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.css
@@ -141,11 +141,6 @@ a:hover {
   padding: 0.5em 0.5em 0em 0.5em;
 }
 
-.login__header h3 {
-  text-align: center;
-  margin-top: 0%;
-  margin-bottom: 0%;
-}
 
 
 .login__header p {
@@ -167,9 +162,12 @@ a:hover {
 
 .login__header h3 {
   text-align: center;
-  margin-top: 0%;
+  margin-top: 10px;
   margin-bottom: 0%;
+  font-size: 22px;
+  font-weight: 600;
 }
+
 
 
 .login__header p {
@@ -199,7 +197,7 @@ a:hover {
   color: #777;
   display: grid;
   gap: 0.5em;
-  padding: 1.7em 1.6em 1.3em 1.6em;
+  padding: 0.8em 1.6em 1.3em 1.6em;
   
 }
 
@@ -302,7 +300,8 @@ a:hover {
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-bottom: 5px;
+  margin-top: 10px;
+
 } 
 
 .column {
