--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
@@ -142,8 +142,10 @@
   
   .login__header h3 {
     text-align: center;
-    margin-top: 0%;
+    margin-top: 10px;
     margin-bottom: 0%;
+    font-size: 22px;
+    font-weight: 600;
   }
   
   
@@ -174,7 +176,7 @@
     color: #777;
     display: grid;
     gap: 0.5em;
-    padding: 1.7em 1.6em 1.3em 1.6em;
+    padding: 1.2em 1.6em 1.3em 1.6em;
     
   }
   
@@ -267,9 +269,9 @@
   
   .logo-aplicacion, h1, p {
     text-align: center;
-    padding-bottom: 5px;
-  } 
+    margin-top: 10px;
   
+  } 
   .column {
     display: flex;
     flex-direction: row;
