--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
@@ -141,10 +141,11 @@ a:hover {
 
 .login__header h3 {
   text-align: center;
-  margin-top: 0%;
+  margin-top: 10px;
   margin-bottom: 0%;
+  font-size: 22px;
+  font-weight: 600;
 }
-
 
 .login__header p {
   text-align: center;
@@ -173,7 +174,7 @@ a:hover {
   color: #777;
   display: grid;
   gap: 0.5em;
-  padding: 1.7em 1.6em 1.3em 1.6em;
+  padding: 0.8em 1.6em 1.3em 1.6em;
   
 }
 
@@ -268,7 +269,8 @@ a:hover {
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-bottom: 5px;
+  margin-top: 10px;
+
 } 
 
 
