--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
@@ -141,8 +141,10 @@ a:hover {
 
 .login__header h3 {
   text-align: center;
-  margin-top: 0%;
+  margin-top: 10px;
   margin-bottom: 0%;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 
@@ -173,7 +175,7 @@ a:hover {
   color: #777;
   display: grid;
   gap: 0.5em;
-  padding: 1.7em 1.6em 1.3em 1.6em;
+  padding: 0.8em 1.6em 1.3em 1.6em;
   
 }
 
@@ -280,9 +282,9 @@ a:hover {
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-bottom: 5px;
-} 
+  margin-top: 10px;
 
+} 
 
 .column {
   display: flex;
