--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -5,10 +5,10 @@
     <div class="login">  
       <header class="login__header">
         <div class="logo-produce">
-            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
+          <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
         </div>  
         <div class="logo-aplicacion">
-          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+          <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
         </div>
           <h3>REGISTRATE</h3>
           <p>Persona Natural</p>      
@@ -155,12 +155,11 @@
           <button class="buttonSiguiente" (click)="registroPersonaService()">Registrar</button>
           <button class="buttonCancelar"  (click)="clickPaso1()">Regresar</button>      
         </div>
- 
     
       </div>
       <div class="footer">
         <p>¿Ya tienes una cuenta?</p>  
-        <p><a href="#">Ingresa aquí</a></p>
+        <a href="#">Ingresa aquí</a>
       </div>
     </div>
   </div>
