--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -5,12 +5,12 @@
     <div class="login">
       <div *ngIf="isVisiblePaso1 || isVisiblePaso2 ">
         <header class="login__header">
-           <div class="logo-produce">
-            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
-           </div>  
+          <div class="logo-produce">
+            <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+          </div>  
           <div class="logo-aplicacion">
-          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
-         </div>
+            <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
+          </div>
           <h3>Cambiar contraseña</h3>
           <p>Persona Jurídica</p>
        </header>
