--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
@@ -4,12 +4,12 @@
 <body class="align">
     <div class="login">
     <header class="login__header">
-        <div class="logo-produce">
-            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
-          </div>  
-        <div class="logo-aplicacion">
-          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
-        </div>
+       <div class="logo-produce">
+         <img src="../../assets/img/logo_produce.PNG" alt="Logo" title="Logo" width="138">
+       </div>  
+       <div class="logo-aplicacion">
+         <img src="../../assets/img/logo_vusp.png" alt="Logo" title="Logo" width="138">
+       </div>
           <h3>Inicio de Sesión</h3>
           <p>Persona Natural</p>
     </header>
