--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
@@ -35,7 +35,7 @@
           <a style="text-align:left" href="#"></a>
         </div>
     
-        <div class="center">
+        <div class="align-right">
           <a href="#">Recuperar contraseña</a>
         </div>
         
