--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.css
@@ -297,6 +297,12 @@
     text-align: center;
     margin-bottom: 12px;
   }
+
+  .align-right {
+    text-align: right;
+    margin-bottom: 12px;
+    font-size: 14px;
+  }
   
   .disabled {
     opacity: 0.6;
