--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
@@ -30,7 +30,7 @@
             <p class="validador" *ngIf="validadorContrasenaActual">Debe ingresar la contraseña.</p>
         </div>
     
-        <div class="center">
+        <div class="align-right">
           <a href="#">Recuperar contraseña</a>
         </div>
         
