--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
@@ -293,6 +293,13 @@ a:hover {
   margin-bottom: 12px;
 }
 
+.align-right {
+  text-align: right;
+  margin-bottom: 12px;
+  font-size: 14px;
+}
+
+
 .disabled {
   opacity: 0.6;
   cursor: not-allowed;
