--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
@@ -303,7 +303,15 @@ a:hover {
 .center {
   text-align: center;
   margin-bottom: 12px;
+  
 }
+
+.align-right {
+  text-align: right;
+  margin-bottom: 12px;
+  font-size: 14px;
+}
+
 
 .disabled {
   opacity: 0.6;
