--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
@@ -28,7 +28,7 @@
           <a style="text-align:left" href="#"></a>
         </div>
     
-        <div class="center">
+        <div class="align-right">
           <a href="#">Recuperar contraseña</a>
         </div>
         
