--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
@@ -18,23 +18,28 @@
         <div>
              <label for="ruc">N° de RUC del cliente</label>
             <input type="text" id="ruc" name="ruc"  [(ngModel)]="ruc"  placeholder="Ej.:10152346872" maxlength="11" (change)="changeRuc()" (keypress)="restrictNumeric($event)">
-            <p class="validador" *ngIf="validarRuc">Debe ingresar el número de RUC.</p>
+            <p class="validador" *ngIf="validadorRuc">Debe ingresar el número de RUC.</p>
             <p class="validador" *ngIf="validadorRucDigitos">El RUC debe tener 11 digitos.</p>
         </div>
     
           <div>
               <label for="numeroDoc">NÚMERO DOCUMENTO</label>
               <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento"  placeholder="Ej.:15234687" (change)="changeNroDocumento()"  (keypress)="restrictNumeric($event)" maxlength="12">
-              <p class="validador" *ngIf="validarNroDocumento">Debe ingresar el número de documento.</p>
+              <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
           </div>
     
-        <div>
-          <label for="contraseña">CONTRASEÑA</label>
-          <input type="text" id="contraseña" name="contraseña" [(ngModel)]="contrasena"  placeholder="" (change)="changeContrasena()">
-          <p class="validador" *ngIf="validarContrasena">Debe ingresar la contraseña.</p>
-          <a style="text-align:left" href="#"></a>
+          <div>
+          <div class="input-wrapper">
+            <label for="contrasena">CONTRASEÑA</label>
+            <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena($event)" maxlength="150" >      
+            <svg  (click)="mostrarContrasena()" id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+            <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+          </svg>
+          </div>
+          <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
         </div>
-    
+
         <div class="align-right">
           <a href="#">Recuperar contraseña</a>
         </div>
