--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.css
@@ -136,6 +136,8 @@
   /* ---------- LOGIN ---------- */
   .login {
     width: 410px;
+    height: 620px;
+    background-color: #FFF
   }
   
   .login__header {
