--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.css
@@ -61,6 +61,15 @@
       }
       
 /* ---------- LOGIN ---------- */
+
+.container 
+{
+  width: 410px;
+  height: 620px;
+  background-color: #fff;
+  padding: 0em 0em 1.3em 0em;
+}
+
 .form {
     width: 410px;
     background-color: #fff;
@@ -543,6 +552,7 @@
   border: 1px solid #ccc;
  
 }
+
   .title {
     width: 50%;
     padding: 25px 10px 10px 25px;
