--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -2,6 +2,7 @@
   <p style="font-size: 20px; color: white">Procesando información, por favor no cierre la ventana.</p>
 </ngx-spinner>
 <body class="align">
+  <div class="container">
     <div class="form"> 
         <div class="header" *ngIf="isVisiblePerfil">
          <div class="circle"> 
@@ -112,6 +113,7 @@
            </div>
         </div>
      </div>
+    </div>
    </body>
    
    
