--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
@@ -131,6 +131,8 @@ a:hover {
 /* ---------- LOGIN ---------- */
 .login {
   width: 410px;
+  height: 620px;
+  background-color: #FFF
 }
 
 .login__header {
