--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-empresa/edicion-perfil-empresa.component.html
@@ -44,7 +44,7 @@
                     <div class="right">
                         <label for="numeroDoc">N° documento</label>
                         <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)" maxlength="12" (blur)="btnBuscarDNI()" [disabled]="isDisableNroDocumento" (keypress)="restrictNumeric($event)" >
-                        <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
+                        <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el N° de documento.</p>
                       </div>
                 </div>
             
